prevent map from zooming out so far that a gap appears under navbar

--- a/public/scss/app.scss
+++ b/public/scss/app.scss
@@ -6,10 +6,10 @@ body {
 }
 
 #map {
-  position:absolute;
-  top: 12%;
+  position: absolute;
+  top: 13%;
   right: 0;
-  bottom: 0%;
+  bottom: 0;
   width: 100%;
   z-index: -1;
 }
@@ -18,7 +18,7 @@ body {
   position: absolute;
   top: 0;
   width: 100%;
-  height: 12%;
+  height: 13%;
   background-color: rgb(232,144,12);
   -webkit-box-shadow: 3px 1px 3px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 3px 1px 3px 0px rgba(0,0,0,0.75);
@@ -55,6 +55,23 @@ body {
     font-family: "EB Garamond";
     vertical-align: middle;
     margin-left: 3%;
+  }
+}
+
+.no-results-alert {
+  position: absolute;
+  top: 10%;
+  width: 100%;
+  height: 75px;
+  background-color: red;
+  z-index: 2;
+
+  h1 {
+    float: left;
+  }
+
+  p {
+    float: left;
   }
 }
 
